# long-math

./: .gitignore  CMakeLists.txt  README.md
lib/: number.cpp  number.h
